--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,17 +7,4 @@
   <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 
-<div class="text-center">
-  <h1>Movies</h1>
-  @foreach (Movie movie in ViewBag.Movies)
-  {
-    <div>
-      <h2>@movie.Title</h2>
-      <h1>Actors</h1>
-      @foreach (Actor actor in movie.Actors)
-      {
-        <p>@actor.Name</p>
-      }
-    </div>
-  }
-</div>
+<div class="text-center"></div>
