--- a/Views/Model/HandleModels.cshtml
+++ b/Views/Model/HandleModels.cshtml
@@ -7,14 +7,25 @@
     <div class="row">
         <div class="col-md-6">
             <h2>Current models</h2>
-            @if(ViewBag.CurrentModels != null)
-                {
-                    @foreach(var currentModel in ViewBag.CurrentModels)
-                    {
-                        <h2>@currentModel.ModelName</h2>
-                    }
-                }
-            <button class="btn btn-primary">Edit</button> <button class="btn btn-primary btn-danger">Delete</button>
+            <form method="post" asp-action="EditModel">
+                <div class="form-group">
+                    <label>Choose a model:</label>
+                    <select class="form-control" name="selectedModel">
+                        <option value="" disabled selected>&lt;Choose a model&gt;</option>
+                        @if (ViewBag.CurrentModels != null)
+                        {
+                            foreach (var currentModel in ViewBag.CurrentModels)
+                            {
+                                <option value="@currentModel.ID">@currentModel.ModelName</option>
+                                
+                            }
+                        }
+                    </select>
+                </div>
+                <br />
+                <button type="submit" class="btn btn-primary">Edit</button>
+                <button type="submit" class="btn btn-primary btn-danger" asp-action="DeleteModel">Delete</button>
+            </form>
         </div>
         <div class="col-md-6">
             <h2>Add new model</h2>
@@ -51,7 +62,8 @@
                         <input asp-for="ProductCode" class="form-control" />
                     </div>
                 </div>
-                <button type="submit" class="btn btn-primary" asp-controller="Model" asp-action="AddNewModel">Add new model</button>
+                <button type="submit" class="btn btn-primary" asp-controller="Model" asp-action="AddNewModel">Add new
+                    model</button>
             </form>
         </div>
     </div>
