--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -27,9 +27,10 @@
 </body>
 </html> *@
 
-@{
+@{ 
     ViewData["Title"] = "Log In";
 }
+@model LoginViewModel
 
 <!DOCTYPE html>
 <html lang="en">
@@ -44,14 +45,14 @@
     <div class="container">
         <div class="login-box">
             <h2 class="text-center mb-4">Log In</h2>
-            <form>
+            <form method="post">
                 <div class="form-group">
                     <label for="loginEmail">Email address</label>
-                    <input type="email" class="form-control" id="loginEmail" aria-describedby="emailHelp" placeholder="Enter email">
+                    <input asp-for=userName type="text" class="form-control" id="loginEmail" aria-describedby="emailHelp" placeholder="Enter email">
                 </div>
                 <div class="form-group">
                     <label for="loginPassword">Password</label>
-                    <input type="password" class="form-control" id="loginPassword" placeholder="Password">
+                    <input asp-for=password type="password" class="form-control" id="loginPassword" placeholder="Password">
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">Log In</button>
             </form>
