--- a/Views/Model/HandleModels.cshtml
+++ b/Views/Model/HandleModels.cshtml
@@ -1,67 +1,96 @@
 ﻿@model ModelViewModel
 
-<h1 style="text-align: center;">HANDLE SELECTION OF HATS</h1>
+<h1 style="text-align: center;">MANAGE SELECTION OF MODELS</h1>
 <br />
 <br />
 <div class="container">
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-7">
             <h2>Current models</h2>
             <form method="post" asp-action="EditModel">
                 <div class="form-group">
-                    <label>Choose a model:</label>
-                    <select class="form-control" name="selectedModel">
-                        <option value="" disabled selected>&lt;Choose a model&gt;</option>
-                        @if (ViewBag.CurrentModels != null)
-                        {
-                            foreach (var currentModel in ViewBag.CurrentModels)
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th scope="col">Model name</th>
+                                <th scope="col">Description</th>
+                                <th scope="col">Picture</th>
+                                <th scope="col">Product code</th>
+                                <th scope="col">Materials</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var currentModel in ViewBag.CurrentModels)
                             {
-                                <option value="@currentModel.ID">@currentModel.ModelName</option>
-                                
+                                <tr>
+                                    <td>@currentModel.ModelName</td>
+                                    <td>@currentModel.Description</td>
+                                    <td>@currentModel.Picture</td>
+                                    <td>@currentModel.ProductCode</td>
+                                    <td>
+                                        <ul>
+                                            @foreach (var material in currentModel.Materials)
+                                            {
+                                                <li>@material.Name</li>
+                                            }
+                                        </ul>
+                                    </td>
+                                    <td>
+                                        <form method="post" asp-action="EditModel">
+                                            <input type="hidden" name="ModelId" value="@currentModel.ID" />
+                                            <button type="submit" class="btn btn-primary btn-sm">Edit</button>
+                                        </form>
+                                    </td>
+                                    <td>
+                                        <form method="post" asp-action="DeleteModel">
+                                            <input type="hidden" name="ModelId" value="@currentModel.ID" />
+                                            <button type="submit" class="btn btn-primary btn-danger btn-sm">Delete</button>
+                                        </form>
+                                    </td>
+                                </tr>
                             }
-                        }
-                    </select>
+                        </tbody>
+                    </table>
                 </div>
-                <br />
-                <button type="submit" class="btn btn-primary">Edit</button>
-                <button type="submit" class="btn btn-primary btn-danger" asp-action="DeleteModel">Delete</button>
             </form>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-5">
             <h2>Add new model</h2>
             <form method="post" asp-action="AddNewModel">
                 <div class="form-group row">
-                    <div class="col-sm-2">
+                    <div class="col-sm-2" style="margin-right: 15px;">
                         <label>Model name: </label>
                     </div>
-                    <div class="col-sm-4" style="margin-bottom: 5px;">
+                    <div class="col-sm-4" style="margin-bottom: 10px;">
                         <input asp-for="ModelName" class="form-control" />
                     </div>
                 </div>
+                <br />
                 <div class="form-group row">
-                    <div class="col-sm-2">
+                    <div class="col-sm-2" style="margin-right: 15px;">
                         <label>Description: </label>
                     </div>
-                    <div class="col-sm-4" style="margin-bottom: 5px;">
+                    <div class="col-sm-4" style="margin-bottom: 10px;">
                         <input asp-for="Description" class="form-control" />
                     </div>
                 </div>
                 <div class="form-group row">
-                    <div class="col-sm-2">
+                    <div class="col-sm-2" style="margin-right: 15px;">
                         <label>Picture: </label>
                     </div>
-                    <div class="col-sm-4" style="margin-bottom: 5px;">
+                    <div class="col-sm-4" style="margin-bottom: 10px;">
                         <input asp-for="Picture" class="form-control" />
                     </div>
                 </div>
                 <div class="form-group row">
-                    <div class="col-sm-2">
+                    <div class="col-sm-2" style="margin-right: 15px;">
                         <label>Product code: </label>
                     </div>
-                    <div class="col-sm-4" style="margin-bottom: 5px;">
+                    <div class="col-sm-4" style="margin-bottom: 10px;">
                         <input asp-for="ProductCode" class="form-control" />
                     </div>
                 </div>
+                <br />
                 <button type="submit" class="btn btn-primary" asp-controller="Model" asp-action="AddNewModel">Add new
                     model</button>
             </form>
