--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -72,6 +72,7 @@
 @{
     ViewData["Title"] = "Register";
 }
+@model RegisterViewModel
 
 <!DOCTYPE html>
 <html lang="en">
@@ -87,32 +88,49 @@
         <div class="login-box">
             <!-- Använder samma CSS-klass för enhetlig design -->
             <h2 class="text-center mb-4">Register</h2>
-            <form>
+            <form method="post">
                 <div class="form-group">
                     <label for="registerFirstName">First Name</label>
-                    <input type="text" class="form-control" id="registerFirstName" placeholder="Enter first name">
+                    <input asp-for="FirstName" type="text" class="form-control" id="registerFirstName" placeholder="Enter first name">
                 </div>
                 <div class="form-group">
                     <label for="registerLastName">Last Name</label>
-                    <input type="text" class="form-control" id="registerLastName" placeholder="Enter last name">
+                    <input asp-for="LastName" type="text" class="form-control" id="registerLastName" placeholder="Enter last name">
                 </div>
                 <div class="form-group">
                     <label for="registerEmail">Email address</label>
-                    <input type="email" class="form-control" id="registerEmail" aria-describedby="emailHelp" placeholder="Enter email">
+                    <input asp-for="Email" type="email" class="form-control" id="registerEmail" aria-describedby="emailHelp" placeholder="Enter email">
                 </div>
                 <div class="form-group">
                     <label for="registerPhoneNumber">Phone Number</label>
-                    <input type="tel" class="form-control" id="registerPhoneNumber" placeholder="Enter phone number">
+                    <input asp-for=Phonenumber type="tel" class="form-control" id="registerPhoneNumber" placeholder="Enter phone number">
+                </div>
+                <div class="form-group">
+                    <label for="registerStreetAddress">StreetAddress</label>
+                    <input asp-for=StreetAddress type="text" class="form-control" id="registerStreetAdress" placeholder="Enter Streetadress">
+                </div>
+                <div class="form-group">
+                    <label for="registerZipCode">ZipCode</label>
+                    <input asp-for=ZipCode type="text" class="form-control" id="registerZipCode" placeholder="Enter Zipcode">
+                </div>
+                <div class="form-group">
+                    <label for="registerCity">City</label>
+                    <input asp-for=City type="text" class="form-control" id="registerCity" placeholder="Enter City">
+                </div>
+                <div class="form-group">
+                    <label for="registerCountry">Country</label>
+                    <input asp-for=Country type="text" class="form-control" id="registerCity" placeholder="Enter City">
                 </div>
                 <div class="form-group">
                     <label for="registerPassword">Password</label>
-                    <input type="password" class="form-control" id="registerPassword" placeholder="Password">
+                    <input asp-for=Password type="password" class="form-control" id="registerPassword" placeholder="Password">
                 </div>
                 <div class="form-group">
                     <label for="confirmPassword">Confirm Password</label>
-                    <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm password">
+                    <input asp-for=RepeatPassword type="password" class="form-control" id="confirmPassword" placeholder="Confirm password">
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">Register</button>
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             </form>
             <p class="text-center mt-3">Already have an account? <a href="Login">Log in here</a></p>
         </div>
