--- a/Views/Model/HandleModels.cshtml
+++ b/Views/Model/HandleModels.cshtml
@@ -32,7 +32,7 @@
                                             @foreach (var material in currentModel.Materials)
                                             {
                                                 <li style="list-style: none;">@material.Name</li>
-                                               
+
                                             }
                                         </ul>
                                     </td>
@@ -57,7 +57,8 @@
         </div>
         <div class="col-md-5">
             <h2>Add new model</h2>
-            <form method="post" asp-action="AddNewModel" onsubmit="document.getElementById('selectedMaterials').value = getSelectedMaterials().join(',')">
+            <form method="post" asp-action="AddNewModel"
+                onsubmit="document.getElementById('selectedMaterials').value = getSelectedMaterials().join(',')">
                 <div class="form-group row">
                     <div class="col-sm-2" style="margin-right: 15px;">
                         <label>Model name: </label>
@@ -96,19 +97,21 @@
                     <div class="col-sm-2" style="margin-right: 15px;">
                         <label>Material(s): </label>
                     </div>
-                    <ul>
+                        <div class="col-sm-4" style="margin-bottom: 10px;">
                         @foreach (var material in ViewBag.CurrentMaterials)
                         {
-                            <li style="list-style: none;">
-                            @material.Name <input type="checkbox" id="material-@material.ID" name="SelectedMaterials" value="@material.ID" /> <!-- Använd "SelectedMaterials" istället för "MaterialID" -->
-                            </li>
+                                <input type="checkbox" id="material-@material.ID" name="SelectedMaterials"
+                                    value="@material.ID" />
+                                    @material.Name
+                                    <br />
                         }
-                    </ul>
                 </div>
-                <br />
-                <input type="hidden" id="selectedMaterials" name="SelectedMaterials" />
-                <button type="submit" class="btn btn-primary" asp-controller="Model" asp-action="AddNewModel">Add new model</button>
-            </form>
         </div>
+        <br />
+        <input type="hidden" id="selectedMaterials" name="SelectedMaterials" />
+        <button type="submit" class="btn btn-primary" asp-controller="Model" asp-action="AddNewModel">Add new
+            model</button>
+        </form>
     </div>
+</div>
 </div>
