--- a/Views/Model/HandleModels.cshtml
+++ b/Views/Model/HandleModels.cshtml
@@ -57,8 +57,7 @@
         </div>
         <div class="col-md-5">
             <h2>Add new model</h2>
-            <form method="post" asp-action="AddNewModel"
-                onsubmit="document.getElementById('selectedMaterials').value = getSelectedMaterials().join(',')">
+            <form method="post" asp-action="AddNewModel">
                 <div class="form-group row">
                     <div class="col-sm-2" style="margin-right: 15px;">
                         <label>Model name: </label>
