Validering, bild, material, modell
Väntar bara på kundkoppling

--- a/Views/Order/OrderForm.cshtml
+++ b/Views/Order/OrderForm.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @model OrderViewModel
-<form asp-action="SendForm" method="post">
+<form asp-action="OrderForm" method="post">
         <h1>Order your hat here:</h1>
         <br />
 
