--- a/Views/Order/SpecialOrderForm.cshtml
+++ b/Views/Order/SpecialOrderForm.cshtml
@@ -1,6 +1,6 @@
 ﻿@model SpecialOrderViewModel
 
-<form asp-action="PostSpecialOrder" method="post">
+<form asp-action="SpecialOrderForm" method="post" enctype="multipart/form-data">
     <h1>Customize your hat here :</h1>
     <br />
 
@@ -19,19 +19,19 @@
         <span asp-validation-for="Description" class="text-danger"></span>
     </div>
 
- 
+    <br /> 
     <div class="form-group">
+        <p>Select material: </p>
         @foreach (var material in ViewBag.Material)
         {
-            <input type="checkbox" class="form-check-input" value="@material.Name" id="@material.ID" onchange="updateSelectedValues(this)">
-            <label class="form-check-label" for="@material.ID">@material.Name</label>
+            <input type="checkbox" class="form-check-input" value="@material.ID" id="material-@material.ID" name="selectedMaterials">
+            @material.Name
         }
     </div>
-    <input type="hidden" name="selectedMaterials" id="selectedMaterials" />
     
 
     <div>
-        <label for="formFile" class="form-label mt-4">Please insert an image as an example</label>
+        <label for="formFile" class="form-label mt-4">Please insert an image as an example:</label>
         <input asp-for="Picture" class="form-control" type="file" id="formFile">
     </div>
     <br />
@@ -44,7 +44,7 @@
 
 </form>
 
-<script>
+@* <script>
     function updateSelectedValues(checkbox) {
         var selectedMaterials = [];
         var checkboxes = document.querySelectorAll('.form-check-input:checked');
@@ -53,4 +53,4 @@
         });
         document.getElementById('selectedMaterials').value = JSON.stringify(selectedMaterials);
     }
-</script>
+</script> *@
