--- a/Views/Model/EditModel.cshtml
+++ b/Views/Model/EditModel.cshtml
@@ -7,7 +7,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-7">
-                <h2>SELECTED MODEL: @Model.ModelName</h2>
+                <h2>SELECTED MODEL</h2>
+                <br />
                 <div class="form-group">
                     <div class="form-group row">
                         <div class="col-sm-2" style="margin-right: 15px;">
@@ -50,7 +51,10 @@
                 {
                     @foreach (var materials in ViewBag.LinkedMaterials)
                     {
-                        <p>@materials.Name</p>
+                        <input type="checkbox" id="material-@materials.ID" name="SelectedMaterials" value="@materials.ID"
+                            checked="true" />
+                        @materials.Name
+                        <br />
                     }
                 }
                 else
@@ -63,7 +67,9 @@
                 {
                     @foreach (var material in ViewBag.OtherMaterials)
                     {
-                        <p>@material.Name</p>
+                        <input type="checkbox" id="material-@material.ID" name="SelectedMaterials" value="@material.ID" />
+                        @material.Name
+                        <br />
                     }
                 }
                 else
@@ -73,6 +79,7 @@
             </div>
         </div>
     </div>
+    <input type="hidden" name="ModelId" value="@ViewBag.ModelID" />
     <button type="submit" class="btn btn-primary btn-success" asp-controller="Model" asp-action="SaveEdit">Save
         changes</button>
 </form>
