--- a/Views/Model/HandleModels.cshtml
+++ b/Views/Model/HandleModels.cshtml
@@ -12,9 +12,9 @@
                     <table class="table table-striped">
                         <thead>
                             <tr>
+                                <th scope="col">Picture</th>
                                 <th scope="col">Model name</th>
                                 <th scope="col">Description</th>
-                                <th scope="col">Picture</th>
                                 <th scope="col">Product code</th>
                                 <th scope="col">Materials</th>
                             </tr>
@@ -23,9 +23,9 @@
                             @foreach (var currentModel in ViewBag.CurrentModels)
                             {
                                 <tr>
+                                    <td><img src="~/Pictures/HattarBild.jpg" alt="Model Thumbnail" width="45" height="45"></td>
                                     <td>@currentModel.ModelName</td>
                                     <td>@currentModel.Description</td>
-                                    <td>@currentModel.Picture</td>
                                     <td>@currentModel.ProductCode</td>
                                     <td>
                                         <ul>
