--- a/Views/Model/EditModel.cshtml
+++ b/Views/Model/EditModel.cshtml
@@ -14,7 +14,7 @@
                         <label>Picture: </label>
                     </div>
                     <div class="col-sm-4" style="margin-bottom: 10px;">
-                        <input asp-for="Picture" class="form-control" />
+                        <input asp-for="ImagePath" class="form-control" />
                     </div>
                 </div>
                 <div class="form-group">
