--- a/Views/Model/HandleModels.cshtml
+++ b/Views/Model/HandleModels.cshtml
@@ -23,13 +23,13 @@
                             @foreach (var currentModel in ViewBag.CurrentModels)
                             {
                                 <tr>
-                                    if  (@currentModel.ImagePath == null)
+                                    @if (currentModel.ImagePath == null)
                                     {
-                                    <td><img src="~/Pictures/GenericHat.png" alt="Model Thumbnail" width="45" height="45"></td>
+                                        <td><img src="~/Pictures/GenericHat.png" alt="Model Thumbnail" width="45" height="45"></td>
                                     }
-                                    else 
+                                    else
                                     {
-                                    <td><img src="@Model.ImagePath" alt="Model Thumbnail" width="45" height="45"></td>
+                                        <td><img src="~/Pictures/@currentModel.ImagePath" alt="Model Thumbnail" width="45" height="45"></td>
                                     }
                                     <td>@currentModel.ModelName</td>
                                     <td>@currentModel.Description</td>
