--- a/Views/Model/HandleModels.cshtml
+++ b/Views/Model/HandleModels.cshtml
@@ -64,7 +64,7 @@
         </div>
         <div class="col-md-5">
             <h2>Add new model</h2>
-            <form method="post" asp-action="AddNewModel">
+            <form method="post" asp-action="AddNewModel" enctype="multipart/form-data">
                 <div class="form-group row">
                     <div class="col-sm-2" style="margin-right: 15px;">
                         <label>Model name: </label>
@@ -112,6 +112,14 @@
                             <br />
                         }
                     </div>
+                </div>
+                <div class="form-group row">
+            <div class="col-sm-2" style="margin-right: 15px;">
+                <label>Upload Image: </label>
+            </div>
+            <div class="col-sm-4" style="margin-bottom: 10px;">
+                <input type="file" name="imageFile" class="form-control-file" />
+            </div>
                 </div>
                 <br />
                 <button type="submit" class="btn btn-primary" asp-controller="Model" asp-action="AddNewModel">Add new
