--- a/Views/Model/EditModel.cshtml
+++ b/Views/Model/EditModel.cshtml
@@ -11,16 +11,24 @@
                 <br />
                 <div class="form-group row">
                     <div class="col-sm-2" style="margin-right: 15px;">
-                        <label>Picture: </label>
+                        @if (ViewBag.CurrentModel.ImagePath == null)
+                                    {
+                                        <td><img src="~/Images/GenericHat.png" alt="Model Thumbnail" width="45" height="45"></td>
+                                    }
+                                    else
+                                    {
+                                        <td><img src="~/Images/@ViewBag.currentModel.ImagePath" alt="Model Thumbnail" width="45" height="45"></td>
+                                    }
+                        <label>Change picture: </label>
                     </div>
                     <div class="col-sm-4" style="margin-bottom: 10px;">
-                        <input asp-for="ImagePath" class="form-control" />
+                        <input type="file" name="imageFile" class="form-control-file" />
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="form-group row">
                         <div class="col-sm-2" style="margin-right: 15px;">
-                            <label>Model name: </label>
+                            <label>Change model name: </label>
                         </div>
                         <div class="col-sm-4" style="margin-bottom: 10px;">
                             <input asp-for="ModelName" class="form-control" />
@@ -28,7 +36,7 @@
                     </div>
                     <div class="form-group row">
                         <div class="col-sm-2" style="margin-right: 15px;">
-                            <label>Description: </label>
+                            <label>Change description: </label>
                         </div>
                         <div class="col-sm-4" style="margin-bottom: 10px;">
                             <input asp-for="Description" class="form-control" />
@@ -36,7 +44,7 @@
                     </div>
                     <div class="form-group row">
                         <div class="col-sm-2" style="margin-right: 15px;">
-                            <label>Product code: </label>
+                            <label>Change product code: </label>
                         </div>
                         <div class="col-sm-4" style="margin-bottom: 10px;">
                             <input asp-for="ProductCode" class="form-control" />
