--- a/Views/Model/EditModel.cshtml
+++ b/Views/Model/EditModel.cshtml
@@ -3,7 +3,7 @@
 <h1 style="text-align: center;">EDIT MODEL</h1>
 <br />
 <br />
-<form method="post" asp-action="SaveEdit">
+<form method="post" asp-action="SaveEdit" enctype="multipart/form-data">
     <div class="container">
         <div class="row">
             <div class="col-md-7">
@@ -11,13 +11,13 @@
                 <br />
                 <div class="form-group row">
                     <div class="col-sm-2" style="margin-right: 15px;">
-                        @if (ViewBag.CurrentModel.ImagePath == null)
+                        @if (ViewBag.CurrentModel.ImagePath == null || ViewBag.CurrentModel.ImagePath == "")
                                     {
                                         <td><img src="~/Images/GenericHat.png" alt="Model Thumbnail" width="45" height="45"></td>
                                     }
                                     else
                                     {
-                                        <td><img src="~/Images/@ViewBag.currentModel.ImagePath" alt="Model Thumbnail" width="45" height="45"></td>
+                                        <td><img src="~/Images/@ViewBag.CurrentModel.ImagePath" alt="Model Thumbnail" width="45" height="45"></td>
                                     }
                         <label>Change picture: </label>
                     </div>
