--- a/Views/Order/PrintOrder.cshtml
+++ b/Views/Order/PrintOrder.cshtml
@@ -34,11 +34,11 @@
             <div class="form-group">
                 <label for="Payment">Enter who's paying for the shipping</label>
                 <div>
-                    <input asp-for="Payment" type="radio" id="PaymentCompany" value="Company" name="paymentType" />
+                    <input asp-for="Payment" type="radio" id="PaymentCompany" value="Company" />
                     <label for="PaymentCompany">The company</label>
                 </div>
                 <div>
-                    <input asp-for="Payment" type="radio" id="PaymentCustomer" value="Customer" name="paymentType" />
+                    <input asp-for="Payment" type="radio" id="PaymentCustomer" value="Customer" />
                     <label for="PaymentCustomer">Customer</label>
                 </div>
             </div>
