--- a/Views/Model/EditModel.cshtml
+++ b/Views/Model/EditModel.cshtml
@@ -23,7 +23,7 @@
                     }
                     else
                     {
-                        <img id="modelImage" src="~/Images/@ViewBag.CurrentModel.ImagePath" alt="Model Thumbnail"
+                        <img id="modelImage" src="@ViewBag.CurrentModel.ImagePath" alt="Model Thumbnail"
                              width="90" height="90">
                     }
                 </div>
