--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using App
 @using App.Entities
 @using App.Models
+@using App.Interfaces
+@inject ISessionManager user
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
