--- a/Views/Account/RegisterAdmin.cshtml
+++ b/Views/Account/RegisterAdmin.cshtml
@@ -3,6 +3,8 @@
 }
 @model RegisterAdminViewModel
 
+<link rel="stylesheet" href="~/css/Register.css">
+
 <img class="background-image" src="~/Pictures/HattarBild.jpg" alt="Background Image">
 <div class="container">
   <div class="login-box">
