--- a/Views/Model/EditModel.cshtml
+++ b/Views/Model/EditModel.cshtml
@@ -57,9 +57,15 @@
                     <div class="col-sm-2" style="margin-right: 15px;">
                         <label>Change product code: </label>
                     </div>
-                    <div class="col-sm-4" style="margin-bottom: 10px;">
-                        <input asp-for="ProductCode" class="form-control" />
-                    </div>
+                    <select asp-for="ProductCode" class="form-control">
+                        <option value="6500 00 00 00">6500 00 00 00</option>
+                        <option value="6504 00 00 00">6504 00 00 00</option>
+                        <option value="6505 00 00 00">6505 00 00 00</option>
+                        <option value="6506 00 00 00">6506 00 00 00</option>
+                        <option value="6507 00 00 00">6507 00 00 00</option>
+                        <option value="6812 00 00 00">6812 00 00 00</option>
+                        <option value="6812 91 00 00">6812 91 00 00</option>
+                    </select>
                 </div>
                 <br />
             </div>
