--- a/Views/Model/HandleModels.cshtml
+++ b/Views/Model/HandleModels.cshtml
@@ -88,13 +88,13 @@
                     </div>
                     <div class="col-sm-4" style="margin-bottom: 10px;">
                         <select asp-for="ProductCode" class="form-control">
-                            <option value="varukod1">6500 00 00 00</option>
-                            <option value="varukod2">6504 00 00 00</option>
-                            <option value="varukod3">6505 00 00 00</option>
-                            <option value="varukod4">6506 00 00 00</option>
-                            <option value="varukod5">6507 00 00 00</option>
-                            <option value="varukod6">6812 00 00 00</option>
-                            <option value="varukod7">6812 91 00 00</option>
+                            <option value="6500 00 00 00">6500 00 00 00</option>
+                            <option value="6504 00 00 00">6504 00 00 00</option>
+                            <option value="6505 00 00 00">6505 00 00 00</option>
+                            <option value="6506 00 00 00">6506 00 00 00</option>
+                            <option value="6507 00 00 00">6507 00 00 00</option>
+                            <option value="6812 00 00 00">6812 00 00 00</option>
+                            <option value="6812 91 00 00">6812 91 00 00</option>
                         </select>
                     </div>
                     <div class="col-sm-2" style="margin-bottom: 10px;">
